erDiagram
  Organization ||--o{ User : has
  Organization ||--o{ Project : owns
  Organization ||--o{ Task : scopes
  Organization ||--o{ Notification : scopes
  User ||--o{ Project : manages
  User ||--o{ ProjectMember : joins
  User ||--o{ RefreshToken : sessions
  Project ||--o{ ProjectMember : has
  Project ||--o{ Column : has
  Project ||--o{ Task : contains
  Project ||--o{ Label : has
  Column ||--o{ Task : holds
  Task ||--o{ TaskAssignee : has
  Task ||--o{ TaskLabel : tagged
  Task ||--o{ ChecklistItem : has
  Task ||--o{ Comment : has
  Task ||--o{ Attachment : has
  Task ||--o{ ActivityLog : logs
  Label ||--o{ TaskLabel : applied
  Comment ||--o{ CommentMention : mentions
  User ||--o{ TaskAssignee : assigned
  User ||--o{ CommentMention : mentioned
